log
Sun 14 Aug 2022 01:35:30 AM UTC: 
 tests:  0|7
total_score: 0/70
43ca2c2
Sun 14 Aug 2022 01:43:25 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   15 |     c=a+b;
      |      ^
cc1: all warnings being treated as errors
Compilation failed
79c7512
Sun 14 Aug 2022 01:43:59 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
111f23a
Sun 14 Aug 2022 01:57:38 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
65dd270
